semi fixed grid for projects. semi giving up

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
   <body>
     <header>
-      <h1>Erika Salcedo's Porfolio</h1>
+      <h1>Erika Salcedo's Portfolio</h1>
   <!-- navigation -->
          <nav>
            <ul>
              <li><a href="#about-me">About Me</a></li>
+             <li><a href="#my-work">My Work</a></li>
              <li><a href="#contact-info">Contact Information</a></li>
           </ul>
          </nav>
@@ -22,7 +23,7 @@
     <!-- hero/jumbotron -->
     <section class="hero">
       <div class="image bio-image"></div>
-      <div class="hero-title" id="#about-me">
+      <div class="hero-title" id="about-me">
         <h2>Hello there,</h2>
         <p>
          I'm Erika. I am a bit of a noob..but this shall be my collection of websites. Hopefully we see significant improvements as I go along. 
@@ -33,7 +34,7 @@
  <!-- end hero -->
 
  <!-- Projects section -->
-<section class="project" id="#my-projects">
+<section class="project" id="my-work">
   <div class="flex-row">
     <h2 class="project-title">What I've Worked On</h2>
   </div>
@@ -43,21 +44,77 @@
     <br /> Enjoy!
   </p>
   </div>
-</section>
+
+  <!-- GRID CONTAINER -->
+  <div class="grid-wrapper">
+    <div class="grid-container">
+      <div class="grid-item item-1"><h4 class="item-title"><a href="https://es2013.github.io/02-run-buddy-run/">Run Buddy </a></h4></div>
+      <div class="grid-item item-2"><h4 class="item-title"><a href="https://es2013.github.io/horiseon-refactor-challenge01/">Horiseon Refactor</a></h4></div>
+      <div class="grid-item item-3"><h4 class="item-title">Penny1</h4></div>
+      <div class="grid-item item-4"><h4 class="item-title">Penny2</h4></div>
+      <div class="grid-item item-5"><h4 class="item-title">Penny3</h4></div>
+   </div>
+  </div>
  <!-- end projects section -->
+</section>
 
-
-
-<!-- Contact information -->
-      <section id="#contact-info">
-        <h2>Contact Info</h2>
-        <ul>
-          <li><strong>Email:</strong> <a href="#">erikasalcedo@gmail.com</a></li>
-          <li><strong>Github:</strong> <a href="#">es2013</a></li>
-          <li><strong>Portfolio:</strong> <a href="https://es2013.github.io/">es2013.github.io</a></li>
-        </ul>
-      </section>
-      <!-- end contact information -->
+<!-- CONTACT INFORMATION -->
+<section id="contact-info" class="contact">
+  <div class="flex-row">
+    <h2 class="contact-title">Contact Information</h2>
+  </div>
+  <div class="contact-item">
+    <h3>Email:</h3>
+    <div class="contact-img">
+      <img src="assets/images/email-icon.png" alt="email"/>
     </div>
+    <div class="contact-item-info">
+      <h4><a href="mailto:erikasalcedo013@gmail.com">erikasalcedo013@gmail.com</a></h4>
+    </div>
+</div>
+  <div class="contact-item">
+    <h3>Github:</h3>
+    <div class="contact-img">
+      <img src="assets/images/github-icon.png" alt="github"/>
+    </div>
+    <div class="contact-item-info">
+      <h4><a href="https://github.com/es2013">es2013</a></h4>
+    </div>
+  </div>
+  <div class="contact-item">
+    <h3>Portfolio:</h3>
+    <div class="contact-img">
+      <img src="assets/images/website-icon.png" alt="website"/>
+    </div>
+    <div class="contact-item-info">
+      <h4><a href="https://es2013.github.io/">es2013.github.io</a></h4>
+    </div>
+  </div>
+  <div class="contact-item">
+    <h3>LinkedIn:</h3>
+    <div class="contact-img">
+      <img src="assets/images/linkedin-icon.png" alt="linkedin"/>
+    </div>
+    <div class="contact-item-info">
+      <h4><a href="hhttps://www.linkedin.com/in/erikasalcedo/">/erikasalcedo</a></h4>
+    </div>
+  </div>
+  </section>
+
+  <!-- https://www.iconsdb.com/custom-color/github-icons.html for custom social icons -->
+<!-- END CONTACT INFORMATION -->
+
+
+
+
+    <!-- Start footer -->
+    
+  <footer>
+    <h2>❤️ challenge 02</h2>
+    <div>
+      <p>UCLA Coding Bootcamp 2020-2021</p>
+    </div>
+  </footer>
+  <!-- END footer -->
   </body>
 </html>
